examples/failing/RequalifyErrors/M2.purs
module RequalifyErrors.M2 where

data X = X
